--- a/packages/docs/src/css/custom.css
+++ b/packages/docs/src/css/custom.css
@@ -19,11 +19,21 @@
 
 [data-theme="light"] {
   --text-color: #000;
+  --blue-button-color: #084696;
+  --blue-underlay: rgba(66, 144, 245, 0.15);
+  --blue-underlay-hover: rgba(66, 144, 245, 0.25);
   --light-text-color: #444;
+  --clear-hover: rgba(0, 0, 0, 0.04);
+  --box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 [data-theme="dark"] {
   --text-color: #fff;
+  --blue-underlay: rgba(255, 255, 255, 0.15);
+  --blue-underlay-hover: rgba(255, 255, 255, 0.25);
+  --clear-hover: rgba(255, 255, 255, 0.06);
+  --blue-button-color: white;
   --light-text-color: #aaa;
+  --box-shadow: 0 1px 4px rgba(255, 255, 255, 0.2);
 }
 
 [data-theme="light"] .docusaurus-highlight-code-line {
