--- a/packages/docs/components/LandingPage/realvideos.module.css
+++ b/packages/docs/components/LandingPage/realvideos.module.css
@@ -1,45 +1,53 @@
-.ifyouknowrow {
+.realvideos {
   display: flex;
   flex-direction: row;
-  text-align: right;
-  justify-content: flex-end;
-  align-items: center;
 }
 
-.ifyouknowtitle {
+.realtitle {
   font-size: 2.5em;
   font-weight: 700;
   font-family: --apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.1;
-  text-align: right;
 }
 
-.rea {
+.realgradient {
   background: linear-gradient(to right, rgb(66, 144, 245), rgb(66, 233, 245));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
 
-.aknow {
-  display: inline-block;
-}
-
-.aknow:hover  {
-  text-decoration: none;
+.realmp4container {
+  flex: 1;
+  justify-content: flex-end;
+  align-items: center;
+  display: flex;
 }
 
 @media screen and (max-width: 900px) {
-  .ifyouknowrow {
+  .realvideos {
     flex-direction: column-reverse;
-    text-align: left;
+  }
+  .realmp4container {
     justify-content: flex-start;
-    align-items: flex-start;
   }
-  .ifyouknowtitle {
-    text-align: left;
+  .icon {
+    animation: none;
+    margin-bottom: 30px;
   }
-  .aknow {
-    margin-bottom: 80px;
+}
+
+@keyframes goup {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
   }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.icon {
+  animation: goup 0.6s;
 }
