make landing page more responsive
Former-commit-id: dfbc356a4d24f7ac921e084db864a9fa0f04abe4

--- a/packages/docs/components/LandingPage/github.module.css
+++ b/packages/docs/components/LandingPage/github.module.css
@@ -10,3 +10,12 @@
   font-size: 0.75em;
   margin-top: 2.5px;
 }
+
+@media screen and (max-width: 900px) {
+  .githubicon {
+    display: none;
+  }
+  .stars {
+    display: none;
+  }
+}
