fix: add a css patch

--- a/packages/docs/src/css/custom.css
+++ b/packages/docs/src/css/custom.css
@@ -58,3 +58,8 @@
 [data-theme="dark"] .shiki.min-light {
   display: none;
 }
+
+/* Patches */
+pre.shiki > .code-title {
+  color: var(--ifm-color-emphasis-900) !important;
+}
