--- a/packages/cli/styles/styles.css
+++ b/packages/cli/styles/styles.css
@@ -17,3 +17,9 @@ body {
 .remotion-splitter-active {
 	background-color: var(--blue);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
