--- a/packages/cli/styles/styles.css
+++ b/packages/cli/styles/styles.css
@@ -24,3 +24,11 @@ input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
 }
+
+input:focus,
+button:focus,
+a:focus {
+	outline: none;
+	box-shadow: 0 0 1px 2px rgba(255, 255, 255, 0.35);
+	border-radius: 3px;
+}
