--- a/packages/example/src/weird-css.css
+++ b/packages/example/src/weird-css.css
@@ -1,6 +1,12 @@
-html {
+/*
+By injecting this we test how resilient the Remotion UI is to weird global CSS.
+*/
+
+html,
+* {
 	font-size: 100px;
 	color: red;
 	line-height: 5;
 	font-family: 'Comic Sans MS';
+	box-sizing: content-box;
 }
